# webrtc-fighter

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  biome.json  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
src/: cas.ts  input.ts  logger.ts  main.ts  protocol.ts  renderer.ts  rollback.ts  viewer_babylon.ts  vm_rhai.ts  wasm_env_stub.ts  webrtc.ts
wasm-rhai/: Cargo.toml  build.sh
wasm-rhai/src/: lib.rs
